microservices/home-assistant/home-assistant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: home-assistant
  name: home-assistant
  namespace: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      nodeSelector:
        node-role.kubernetes.io/master: "true"
      volumes:
        - name: ha-pv-storage
          persistentVolumeClaim:
            claimName: home-assistant
      containers:
        - image: ghcr.io/home-assistant/home-assistant:stable
          name: home-assistant
          volumeMounts:
            - mountPath: "/config"
              name: ha-pv-storage
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  type: NodePort
  selector:
    app: home-assistant
  ports:
    - protocol: TCP
      port: 8123
      name: http
      nodePort: 30123
